tests/baselines/reference/enumConflictsWithGlobalIdentifier.errors.txt
==== tests/cases/compiler/enumConflictsWithGlobalIdentifier.ts (2 errors) ====
    enum Position { 
        IgnoreRulesSpecific = 0,
    }
    var x = IgnoreRulesSpecific.
            ~~~~~~~~~~~~~~~~~~~
!!! enumConflictsWithGlobalIdentifier.ts(4,9): error TS2095: Could not find symbol 'IgnoreRulesSpecific'.
    var y = Position.IgnoreRulesSpecific;
        ~
!!! enumConflictsWithGlobalIdentifier.ts(5,5): error TS1005: ',' expected.
    